claude has fixed what gpt-4o failed

--- a/kitabo/ensi/_config.yml
+++ b/kitabo/ensi/_config.yml
@@ -62,4 +62,6 @@ sphinx:
     myst_heading_anchors    : 5
     bibtex_bibfiles         :
       - _bibliography/references.bib
-    bibtex_reference_style  : label
+    bibtex_reference_order: 'citation'
+    bibtex_default_style: 'plain'
+    bibtex_reference_style: 'author_year' # bibtex_reference_style  : 'numeric' #label
